--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -89,3 +89,13 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 992px) {
+
+}
+
+@media screen and (max-width: 600px) {
+    .page-wrapper-flex{
+        padding: 1.5em;
+    }
+}
