--- a/views/pages/public/createaccount.hbs
+++ b/views/pages/public/createaccount.hbs
@@ -11,7 +11,7 @@
                     <div class="row justify-content-left">
                         <div >
                             <h1 class="text-justify mb-4 form-header-style">Account Information</h1>
-                            <form class="mb-4 row g-3 " action="/createaccount" method="post" name="crateaccount" id="createaccount">
+                            <form class="mb-4 row g-3" action="/{{#unless disablePaymentSidebar}}checkout/{{/unless}}Createaccount" method="post" name="crateaccount" id="createaccount">
                                 <div class="col-md-6">
                                     <label for="inputName" class="form-label">First Name*</label>
                                     <input type="text" class="form-control" aria-label="First name" id="inputName" required>
