completed verify account page

--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -1,7 +1,7 @@
 <div>
     <h4>Sanam</h4>
     <ul>
-        <li><a href="/createaccount">Create Account Page [done - (payment sidebar partial hbs needed)]</a></li>
+        <li><a href="/createaccount">Create Account Page [DONE]</a></li>
         <li><a href="/roomdetails">Room Details Page [done - minor/less adjustments needed]</a></li>
         <li><a href="/userdashboard">Guest User Dashboard [partial - review css]</a></li>
         <li><a href="/updatepassword">Guest Update Password [partial - review css]]</a></li>
@@ -28,6 +28,8 @@
     <h4>Marvie</h4>
     <ul>
         <li><a href="/restaurant">Restaurant Page</a></li>
+        <li>Other pages</li>
+        <li><a href="/verifyaccount">Verify Acc Via Create Acc</a></li>
         <li>Hotel Staff pages</li>
         <li><a href="/portal">Employee Online Portal</a></li>
         <li><a href="/dashboard/staff/65dfe87201b6131436544414">Hotel Staff Account Page</a></li>
