--- a/public/css/createaccount.css
+++ b/public/css/createaccount.css
@@ -105,6 +105,10 @@ h1.form-header-style{
 
 .createAccCenter {
     max-width: 50em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .create-acc-center-container{
