--- a/public/css/partials/paymentSidebar.css
+++ b/public/css/partials/paymentSidebar.css
@@ -11,7 +11,6 @@
 
 .pa-side-card {
     background-color: #FFECC8;
-    height: 100%;
     display: flex;
     align-items: center;
 }
@@ -245,6 +244,28 @@ ul {
     .display-None{
         display: none;
     }
+
+    .timeout-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        margin-bottom: 0.5em;
+    }
+
+    .timeout-container p {
+        margin: 0;
+        padding: 0;
+        font-weight: 600;
+        font-size: 1em;
+        color: #E45C32;
+    }
+
+    .timeout-container span {
+        font-weight: 600;
+        font-size: 1em;
+        color: #E45C32;
+    }
+
 @media screen and (max-width: 992px) {
     .pa-right-container {
         width: 100%;
