--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -35,5 +35,6 @@
         <li><a href="/dashboard/staff/65dfe87201b6131436544414">Hotel Staff Account Page</a></li>
         <li><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations</a></li>
         <li><a href="/checkout/createaccount">Create Account via Checkout</a></li>
+        <li><a href="/checkout/verifyaccount">Verify Account via Checkout</a></li>
     </ul>
 </div>
