--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -1,7 +1,7 @@
 <div>
     <h4>Sanam</h4>
     <ul>
-        <li><a href="/createaccount">Create Account Page [DONE]</a></li>
+        <li>[DONE, TESTED & REVIEWED]<a href="/createaccount"> Create Account Page</a></li>
         <li><a href="/roomdetails">Room Details Page [done - minor/less adjustments needed]</a></li>
         <li><a href="/userdashboard">Guest User Dashboard [partial - review css]</a></li>
         <li><a href="/updatepassword">Guest Update Password [partial - review css]]</a></li>
@@ -11,30 +11,54 @@
     <h4>Nischal</h4>
     <ul>
         <li>Header & Footer [done - minor/less adjustments needed ]</li>
-        <li><a href="/home">Landings Page [pending]</a></li>
-        <li><a href="/reservations">Guest Confirmed Reservations Page [pending]</a></li>
-        <li><a href="/loyalty">Guest Loyalty History Page [pending]</a></li>
-        <li><a href="/editaccount">Guest Edit Account Page [pending]</a></li>
+        <li>[pending]<a href="/home"> Landings Page </a></li>
+        <li>[pending]<a href="/reservations"> Guest Confirmed Reservations Page</a></li>
+        <li>[pending]<a href="/loyalty"> Guest Loyalty History Page </a></li>
+        <li>[pending]<a href="/editaccount"> Guest Edit Account Page </a></li>
     </ul>
 
     <h4>Taslima</h4>
     <ul>
-        <li><a href="/about">About Us [done - minor adjustments]</a></li>
-        <li><a href="/contactUs">Contact Us [done - minor adjustments]</a></li>
+        <li>[DONE, TESTED & REVIEWED]<a href="/about"> About Us [minor adjustments]</a></li>
+        <li>[DONE, TESTED & REVIEWED]<a href="/contactUs">Contact Us [minor adjustments]</a></li>
         <li><a href="/update-email">Update Email [done - minor adjustments]</a></li>
         <li><a href="/view-inquiries">View Inquiries [done - minor adjustments]</a></li>
     </ul>
 
     <h4>Marvie</h4>
     <ul>
+        <div style="display:none">
+            <li>Reassigned to me pages</li>
+            <li><a href=""> (Static) Landing Page</a></li>
+            <li><a href=""> Guest Confirmed Reservations</a></li>
+            <li><a href=""> Guest Loyalty History</a></li>
+            <li><a href=""> Guest Edit Account</a></li>
+        </div>
+        <li>Static pages</li>
         <li><a href="/restaurant">Restaurant Page</a></li>
+        <li><a href="">Hotel Faqs & Policies</a></li>
         <li>Other pages</li>
-        <li><a href="/verifyaccount">Verify Acc Via Create Acc</a></li>
+        <li>[DONE, TESTED & REVIEWED]<a href="/verifyaccount"> Verify Acc Via Create Acc </a></li>
+        <li>[DONE, TESTED & REVIEWED]<a href="/checkout/createaccount"> Create Account via Checkout</a></li>
+        <li>[DONE, TESTED & REVIEWED]<a href="/checkout/verifyaccount"> Verify Account via Checkout</a></li>
+        <li><a href=""> Checkout Reservation Details</a></li>
+        <li><a href=""> User Reservation Details</a></li>
         <li>Hotel Staff pages</li>
-        <li><a href="/portal">Employee Online Portal</a></li>
-        <li><a href="/dashboard/staff/65dfe87201b6131436544414">Hotel Staff Account Page</a></li>
+        <li>[DONE, TESTED & REVIEWED]<a href="/portal"> Employee Online Portal</a></li>
+        <li>[DONE, TESTED & REVIEWED]<a href="/dashboard/staff/65dfe87201b6131436544414"> Hotel Staff Account Page</a></li>
         <li><a href="/dashboard/staff/viewReservations">Hotel Staff View Reservations</a></li>
-        <li><a href="/checkout/createaccount">Create Account via Checkout</a></li>
-        <li><a href="/checkout/verifyaccount">Verify Account via Checkout</a></li>
+        <div style="display:none">
+            <li><a href=""> Hotel Staff View Guests Checking In</a></li>
+            <li><a href=""> Hotel Staff Inquiries Page</a></li>
+            <li><a href=""> Hotel Staff Create Reservations Page</a></li>
+            <li><a href=""> Manager Generate Report Page</a></li>
+            <li><a href=""> Manager Manage Rooms Page</a></li>
+            <li><a href=""> Manager Manage Promotions Page</a></li>
+            <li><a href=""> Manager Manage Offers Page</a></li>
+            <li><a href=""> Manager Manage Promotions Page</a></li>
+            <li><a href=""> Admin Manage User Accounts Page</a></li>
+            <li><a href=""> Admin Create User Accounts Page</a></li>
+            <li><a href=""> Admin Manage Permissions Page</a></li>
+        </div>
     </ul>
 </div>
