--- a/views/partials/_paymentSidebar.hbs
+++ b/views/partials/_paymentSidebar.hbs
@@ -10,7 +10,14 @@
             <hr class="pa-hr h3"> 
             <div class="room-summary-section pa-left-right-container">
                 <div class="room-image-container">
-                    <img class="img-fluid thumbnail" src="{{bookingData.thumbnailSmall}}.{{bookingData.fileType}}" alt="room thumbnail">
+                     {{#if bookingData.thumbnailSmall}}
+                        <img class="img-fluid thumbnail" src="{{bookingData.thumbnailSmall}}.{{bookingData.fileType}}" alt="room thumbnail">
+                     {{/if }}
+                     {{#unless bookingData.thumbnailSmall}}
+                        <div class="payment-sidebar-placeholder">
+                            <img class="img-fluid thumbnail" src="/img/icons/general/room.svg" alt="room thumbnail">
+                        </div>
+                     {{/unless}}
                 </div>
                 <div class="room-text-container">
                     <div class="room-text-roomtype-header-container">
