--- a/views/pages/hotelguest/reservation.hbs
+++ b/views/pages/hotelguest/reservation.hbs
@@ -2,6 +2,11 @@
     <div class="create-acc-page-container">
         <div class={{#if disablePaymentSidebar}}"create-acc-center-container"{{/if}}{{#unless disablePaymentSidebar}}"pa-right-container"{{/unless}}>
             <div {{#if disablePaymentSidebar}}class="createAccCenter"{{/if}}>
+                <div class="breadCrumbs-wrapper">
+                    <div class="breadCrumbs-container">
+                        {{> _breadcrumbs}}
+                    </div>
+                </div>
                 {{> _h1styled headerTitle="Reservation"}}
                 <div class="subheader-container">
                     <p class="create-acc-p-subheader-style {{#if disablePaymentSidebar}}text-center{{/if}}">Reserve your room now! Create an account to proceed.</p>
