--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -23,6 +23,7 @@
         <li>[DONE, TESTED & REVIEWED]<a href="/contactUs">Contact Us [minor adjustments]</a></li>
         <li><a href="/update-email">Update Email [done - minor adjustments]</a></li>
         <li><a href="/view-inquiries">View Inquiries [done - minor adjustments]</a></li>
+        <li><a href="/">Room Results [done - needs uploading]</a></li>
     </ul>
 
     <h4>Marvie</h4>
@@ -38,6 +39,7 @@
         <li><a href="/restaurant">Restaurant Page</a></li>
         <li><a href="">Hotel Faqs & Policies</a></li>
         <li>Other pages</li>
+        <li><a href="">Forgot Password</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/verifyaccount"> Verify Acc Via Create Acc </a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/createaccount"> Create Account via Checkout</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/verifyaccount"> Verify Account via Checkout</a></li>
