--- a/views/pages/hotelguest/reservation.hbs
+++ b/views/pages/hotelguest/reservation.hbs
@@ -2,19 +2,25 @@
     <div class="create-acc-page-container">
         <div class={{#if disablePaymentSidebar}}"create-acc-center-container"{{/if}}{{#unless disablePaymentSidebar}}"pa-right-container"{{/unless}}>
             <div {{#if disablePaymentSidebar}}class="createAccCenter"{{/if}}>
-                <div class="breadCrumbs-wrapper">
-                    <div class="breadCrumbs-container">
-                        {{> _breadcrumbs}}
-                    </div>
-                </div>
                 {{> _h1styled headerTitle="Reservation"}}
                 <div class="subheader-container">
                     <p class="create-acc-p-subheader-style {{#if disablePaymentSidebar}}text-center{{/if}}">Reserve your room now! Create an account to proceed.</p>
                     <p class="create-acc-p-subheader-style {{#if disablePaymentSidebar}}text-center{{/if}} mt-2">Already have an account? <a class="login-link" href="#">Login</a></p>
                 </div>
-                <div class="card">
-                    <div class="row justify-content-left">
-                        <div >
+                <div class="row justify-content-left">
+                        <form id="reservationForm" name="createReservation">
+                           
+                        </form>
+
+                    </div>
+            </div>
+        </div>
+        {{> _paymentSidebar disable=disablePaymentSidebar}}
+    </div>
+</div>
+
+
+                        {{!-- <div >
                             <h1 class="text-justify mb-4 form-header-style">Account Information</h1>
                             <form class="mb-4 row g-3" action="/{{#unless disablePaymentSidebar}}checkout/{{/unless}}Createaccount" method="post" name="crateaccount" id="createaccount">
                                 <div class="col-md-6">
@@ -49,12 +55,4 @@
                                     <button type="submit" class="btn btn-primary button-next">Next: Verify Email ></button>
                                 </div>
                             </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        {{> _paymentSidebar disable=disablePaymentSidebar}}
-    </div>
-</div>
-
+                        </div> --}}
