--- a/views/pages/hotelguest/createReservation.hbs
+++ b/views/pages/hotelguest/createReservation.hbs
@@ -15,35 +15,156 @@
                 <div class="row justify-content-left">
                         
                     <form id="reservationForm" action="/createReservation" method="post">
+        
                         <div class="form-section" id="section1">
-                            <h2>Personal Information</h2>
-                            <input type="text" placeholder="First Name" name="firstName" required>
-                            <input type="text" placeholder="Last Name" name="lastName" required>
-                            <input type="email" placeholder="Email Address" name="emailAddress" required>
-                            <button type="button" id="button_s1">Next</button>
+                            <div class="card">
+                                <h1 class="text-justify mb-4 form-header-style">Enter your details</h1>
+                                <div>
+                                    <h6>Who are you booking for?</h6> 
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+                                            <label class="form-check-label" for="flexRadioDefault1">
+                                                I am the main guest
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
+                                            <label class="form-check-label" for="flexRadioDefault2">
+                                                booking is for someone else
+                                            </label>
+                                        </div>
+                                </div>
+                                <div>
+                                    <h6>Main Guest Details</h6> 
+                                    <input type="text" placeholder="First Name" name="firstName" required>
+                                    <input type="text" placeholder="Last Name" name="lastName" required>
+                                    <input type="email" placeholder="Email Address" name="emailAddress" required>
+                                </div>
+                                <div>
+                                    <h6>Main Guest Address</h6> 
+                                    <p>textinput</p>
+                                    <div>
+                                        <p>textinput</p>
+                                        <p>textinput</p>
+                                    </div>
+                                    <p>selectdropdown</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <h1 class="text-justify mb-4 form-header-style">Additional Information</h1>
+                                <div>
+                                    <h6>Hotel Policy</h6>
+                                    <div>
+                                        <img src="" alt="check icon">
+                                        <p>Stay flexible: You can cancel for free before 25 January 2024, so lock in this great price today. To learn more click on our Policy below.</p>
+                                        <a href="">Policy Description</a>
+                                    </div>
+                                </div> 
+                                <div>
+                                    <h6>Special Requests</h6>
+                                    <p>Special requests cannot be guaranteed – but the hotel will do its best to meet your needs. You can always make a special request after your booking is complete!</p>
+                                    <p>textinput</p>
+                                </div>
+                                <div>
+                                    <h6>Arrival Time</h6>
+                                    <div>
+                                        <img src="" alt="check icon">
+                                        <p>You can check in between 15:00 and 23:00</p>
+                                    </div>
+                                    <p>Estimated Arriva Time</p>
+                                    <p>Select Dropdown</p>
+                                    <p>*Time is for Toronto Timezone</p>
+                                </div>
+                            </div>
+                            <button type="button" class="button btn-primary next-button" id="button_s1">Next: Enter Payment ></button>
                         </div>
+            
                         
                         <div class="form-section hidden" id="section2">
-                            <h2>Payment Information</h2>
-                            <!-- Placeholder for Payment Fields, ensure they have the 'disabled' attribute by default -->
-                            <input type="text" placeholder="Card Number" name="cardNumber" required disabled>
                             <div>
-                                <button type="button" id="button_s2_back">Back</button>
-                                <button type="button" id="button_s2">Next</button>
+                                <h1 class="text-justify mb-4 form-header-style">Enter your details</h1>
+                                <!-- Placeholder for Payment Fields, ensure they have the 'disabled' attribute by default -->
+                                <div>
+                                    <h6>Card Information</h6>
+                                    <div>
+                                        <input type="text" placeholder="Card Number" name="cardNumber" required disabled>
+                                        <div>
+                                            <p>textinput</p>
+                                            <p>textinput</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <h6>Billing Address</h6>
+                                    <p>textinput</p>
+                                    <div>
+                                        <p>textinput</p>
+                                        <p>textinput</p>
+                                    </div>
+                                    <p>selectDropDowninput</p>
+                                    <div>
+                                        <p>checkInput</p>
+                                        <p>Same as Guest Address</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <button type="button" class="button btn-primary next-button" id="button_s2_back">Back</button>
+                                <button type="button" class="button btn-primary next-button" id="button_s2">Next</button>
                             </div>
                         </div>
                                                 
                         <div class="form-section hidden" id="section3">
-                            <h2>Review Information</h2>
-                            <p>First Name: <span id="reviewFirstName"></span></p>
-                            <p>Last Name: <span id="reviewLastName"></span></p>
-                            <p>Email Address: <span id="reviewEmail"></span></p>
-                            <p>Card Number: <span id="reviewCardNumber"></span></p>
-                                <input type="hidden" name="loyaltyCheck" id="loyaltyCheck_DOM_El" value="unchecked">
-                                <input type="hidden" name="loyaltyValue" id="loyaltyValue_DOM_El" value="0">
+                            <div class="card">
+                                <h1 class="text-justify mb-4 form-header-style">Review Information</h1>
+                                <div>
+                                    <h6>Main Guest Details</h6>
+                                    <p>First Name: <span id="reviewFirstName"></span></p>
+                                    <p>Last Name: <span id="reviewLastName"></span></p>
+                                    <p>Email Address: <span id="reviewEmail"></span></p>
+
+                                    <h6>Main Guest address</h6>
+                                    <p>Address: </p>
+                                    <div>
+                                        <p>City: </p>
+                                        <p>Postal Code: </p>
+                                    </div>
+                                    <p>Country: </p>
+                                </div>
+                                <div>
+                                    <h6>Additional info</h6>
+                                    <p>Special Request: </p>
+                                    <p>Arrival Time: </p>
+                                </div>
+                                <div>
+                                    <h6>Payment info</h6>
+                                    <p>Card Number: <span id="reviewCardNumber"></span></p>
+                                    <p>type: Mastercard</p>
+                                    <p>Expiration Date: </p>
+
+                                    <h6>Billing address</h6>
+                                    <p>Same as guest address</p>
+                                    <div>
+                                        <p>Address: </p>
+                                        <div>
+                                            <p>City: </p>
+                                            <p>Postal Code: </p>
+                                        </div>
+                                        <p>Country: </p>
+                                    </div>
+                                </div>
+                                    <input type="hidden" name="loyaltyCheck" id="loyaltyCheck_DOM_El" value="unchecked">
+                                    <input type="hidden" name="loyaltyValue" id="loyaltyValue_DOM_El" value="10">
+                                <div>
+                                    <h6>Terms & Hotel Policy</h6>
+                                    <a href="">Terms & Conditions</a>
+                                    <a href="">Policy Description</a>
+                                    <p>By completing the reservation, you are confirming that you have read and agreed to the Terms & Conditions and Hotel Policy.</p>
+                                </div>
+                            </div>
                             <div>
-                                <button type="button" id="btn_3Section_back">Back</button>
-                                <button type="submit" id="submitButton">Submit</button>
+                                <button type="button" class="button btn-primary next-button" id="btn_3Section_back">Back</button>
+                                <button type="submit" class="button btn-primary next-button" id="submitButton">Submit</button>
                             </div>
                         </div>
                     </form>
